[AF] Deselect current row if mouse leaves the dropdown

Bug: 861996
Change-Id: Ie3d579b3d59ba230ceec5229b2aebb3921deeda2
Reviewed-on: https://chromium-review.googlesource.com/1138801
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: Fabio Tirelo <ftirelo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575469}
Former-commit-id: 0948203dfbd257a4f84b414602228d64bc8c2894